renamed a table, fixed pagination, added .env file